tests with pthread and mutex

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,19 +6,17 @@
 #    By: gudias <marvin@42lausanne.ch>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/02 16:55:08 by gudias            #+#    #+#              #
-#    Updated: 2022/06/02 17:00:34 by gudias           ###   ########.fr        #
+#    Updated: 2022/06/03 15:48:23 by gudias           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= philosophers
+NAME	= philo
 
 CC		= gcc
-CFLAGS	= -g -Wall -Wextra -Werror
+CFLAGS	= -Wall -Wextra -Werror -pthread
 
 INCL	= -I incs
 RM		= rm -f
-
-LIBFT	= libft/libft.a
 
 SRCSDIR	= srcs
 OBJSDIR	= objs
@@ -35,15 +33,10 @@ $(OBJSDIR)/%.o: $(SRCSDIR)/%.c
 
 all: $(NAME)
 
-$(NAME): $(OBJS) $(LIBFT)
+$(NAME): $(OBJS)
 	@echo "$(YELLOW)Creating executable..$(DEFAULT)"
 	@$(CC) $(CFLAGS) $^ -o $@
 	@echo "$(GREEN)---> ./$@ is ready$(DEFAULT)"
-
-$(LIBFT):
-	@echo "$(YELLOW)Preparing Libft..$(DEFAULT)"
-	@make -C libft 1>/dev/null 2>/dev/null
-	@echo "$(CYAN)---> Libft ready$(DEFAULT)"
 
 clean:
 	@$(RM) -r $(OBJSDIR)
@@ -53,11 +46,7 @@ fclean: clean
 	@$(RM) $(NAME)
 	@echo "$(RED)Removed $(CYAN)./$(NAME)$(DEFAULT)"
 
-libclean: 
-	@make fclean -C libft 1>/dev/null 2>/dev/null
-	@echo "$(RED)Removed $(CYAN)Libft$(DEFAULT)"
-
-debug: $(DBG_OBJS) $(LIBFT)
+debug: $(DBG_OBJS)
 	@echo "$(YELLOW)Preparing files for debug...$(DEFAULT)"
 	@$(CC) $(CFLAGS) $^ -o debug_$(NAME)
 	@echo "$(GREEN)----> ./debug_$(NAME) is ready$(DEFAULT)"
@@ -70,13 +59,9 @@ $(OBJSDIR)/%_dbg.o: $(SRCSDIR)/%.c
 	@mkdir -p $(OBJSDIR)
 	@$(CC) -g3 $(INCL) -c $< -o $@
 
-fullclean: fclean libclean
-
-bonus: re
-
 re: fclean all
 
-.PHONY: all clean fclean re bonus libclean fullclean
+.PHONY: all clean fclean debug re
 
 #COLORS
 RED = \033[1;31m
